added slick image slider for work section

--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,9 @@
   "private": true,
   "dependencies": {
     "foundation": "~5.2",
-    
     "modernizr": "~2.8.2",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "slick.js": "~1.4.1"
   },
   "devDependencies": {}
 }
