--- a/bower.json
+++ b/bower.json
@@ -4,8 +4,7 @@
   "dependencies": {
     "foundation": "~5.2",
     "modernizr": "~2.8.2",
-    "jquery": "~2.1.1",
-    "slick.js": "~1.4.1"
+    "jquery": "~2.1.1"
   },
   "devDependencies": {}
 }
