--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-plumber": "^0.6.1",
     "gulp-sass": "^0.7.1",
     "gulp-size": "^0.3.1",
+    "gulp-subtree": "^0.1.0",
     "gulp-uglify": "^0.3.0",
     "gulp-uncss": "^1.0.0",
     "gulp-useref": "^0.4.3",
