--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-useref": "^0.4.3",
     "gulp-util": "^2.2.14",
     "jshint-stylish": "^0.2.0",
+    "main-bower-files": "^2.6.2",
     "opn": "^0.1.2",
     "streamqueue": "^0.1.0",
     "wiredep": "^1.7.0"
