--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "browser-sync": "^0.9.1",
     "gulp": "^3.6.2",
     "gulp-autoprefixer": "^0.0.7",
-    "gulp-bower-files": "^0.2.3",
     "gulp-cache": "^0.1.11",
     "gulp-clean": "^0.2.4",
     "gulp-concat": "^2.4.3",
     "gulp-csso": "^0.2.8",
     "gulp-filter": "^0.4.1",
     "gulp-flatten": "^0.0.2",
+    "gulp-gh-pages": "^0.5.0",
+    "gulp-htmlmin": "^1.1.1",
     "gulp-imagemin": "^0.5.0",
     "gulp-jshint": "^1.6.1",
     "gulp-load-plugins": "^0.5.1",
